--- a/anasayfa.html
+++ b/anasayfa.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.1/tiny-slider.css">
     <title>Anasayfa</title>
 </head>
 <body>
@@ -208,8 +210,109 @@
         </div>
     </div>
 
+    <div class="ui_book_slider">
+        <div class="kutu js-fillcolor">
+            <img src="" alt="" class="kapak">
+           <div class="sag">
+                <div class="baslik">BIG MAGIC: Creative Live lorem ipsum</div>
+                <div class="yazar">by Elizabeth Gilbert</div>
+                <div class="rating_star">
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star"></span>
+                    <span class="fa fa-star"></span>
+                    <span class="voters">1.345.242 voters</span>
+                </div>
+                <div class="aciklama">
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptates architecto atque aliquid sequi modi officia alias distinctio tempore autem! Eum, sapiente aperiam. Qui, illum quod facere fugiat ducimus similique reprehenderit?
+                </div>
+                <a href="#" class="buton">See The Book</a>
+            </div>
+        </div>
+        <div class="kutu js-fillcolor">
+            <img src="" alt="" class="kapak">
+           <div class="sag">
+                <div class="baslik">BIG MAGIC: Creative Live lorem ipsum</div>
+                <div class="yazar">by Elizabeth Gilbert</div>
+                <div class="rating_star">
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star"></span>
+                    <span class="fa fa-star"></span>
+                    <span class="voters">1.345.242 voters</span>
+                </div>
+                <div class="aciklama">
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptates architecto atque aliquid sequi modi officia alias distinctio tempore autem! Eum, sapiente aperiam. Qui, illum quod facere fugiat ducimus similique reprehenderit?
+                </div>
+                <a href="#" class="buton">See The Book</a>
+            </div>
+        </div>
+        <div class="kutu js-fillcolor">
+            <img src="" alt="" class="kapak">
+           <div class="sag">
+                <div class="baslik">BIG MAGIC: Creative Live lorem ipsum</div>
+                <div class="yazar">by Elizabeth Gilbert</div>
+                <div class="rating_star">
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star"></span>
+                    <span class="fa fa-star"></span>
+                    <span class="voters">1.345.242 voters</span>
+                </div>
+                <div class="aciklama">
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptates architecto atque aliquid sequi modi officia alias distinctio tempore autem! Eum, sapiente aperiam. Qui, illum quod facere fugiat ducimus similique reprehenderit?
+                </div>
+                <a href="#" class="buton">See The Book</a>
+            </div>   
+        </div>
+        <div class="kutu js-fillcolor">
+            <img src="" alt="" class="kapak">
+           <div class="sag">
+                <div class="baslik">BIG MAGIC: Creative Live lorem ipsum</div>
+                <div class="yazar">by Elizabeth Gilbert</div>
+                <div class="rating_star">
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star"></span>
+                    <span class="fa fa-star"></span>
+                    <span class="voters">1.345.242 voters</span>
+                </div>
+                <div class="aciklama">
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptates architecto atque aliquid sequi modi officia alias distinctio tempore autem! Eum, sapiente aperiam. Qui, illum quod facere fugiat ducimus similique reprehenderit?
+                </div>
+                <a href="#" class="buton">See The Book</a>
+            </div>   
+        </div>
+        <div class="kutu js-fillcolor">
+            <img src="" alt="" class="kapak">
+           <div class="sag">
+                <div class="baslik">BIG MAGIC: Creative Live lorem ipsum</div>
+                <div class="yazar">by Elizabeth Gilbert</div>
+                <div class="rating_star">
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star"></span>
+                    <span class="fa fa-star"></span>
+                    <span class="voters">1.345.242 voters</span>
+                </div>
+                <div class="aciklama">
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptates architecto atque aliquid sequi modi officia alias distinctio tempore autem! Eum, sapiente aperiam. Qui, illum quod facere fugiat ducimus similique reprehenderit?
+                </div>
+                <a href="#" class="buton">See The Book</a>
+            </div>   
+        </div>
+       
+    </div>
+
 
 <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.1/min/tiny-slider.js"></script>
+<script src="https://www.jqueryscript.net/demo/Change-Background-Color-Based-On-Image-Color-jQuery-fillcolor/jquery.fillcolor.js"></script>
 <script src="main.js"></script>
 </body>
 </html>
