login_signup eklendi

--- a/anasayfa.html
+++ b/anasayfa.html
@@ -7,7 +7,7 @@
     
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.1/tiny-slider.css">
     <title>Anasayfa</title>
 </head>
@@ -18,11 +18,13 @@
             <div class="header">Book Leader</div>
         </div>
         <div>
-            <i class="material-icons">search</i>          
-            <i class="material-icons">menu</i>
+            <i class="material-icons search_icon">search</i>          
+            <i class="material-icons menu_icon">menu</i>
         </div>    
     </div>
     <!-- //////////// ÜST NAVİGASYON BİTİŞ /////////////-->
+
+  
 
     <div class="icerik">
         <div class="leaderboard">
@@ -313,6 +315,6 @@
 <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.1/min/tiny-slider.js"></script>
 <script src="https://www.jqueryscript.net/demo/Change-Background-Color-Based-On-Image-Color-jQuery-fillcolor/jquery.fillcolor.js"></script>
-<script src="main.js"></script>
+<script src="javascript/main.js"></script>
 </body>
 </html>
