--- a/anasayfa.html
+++ b/anasayfa.html
@@ -12,6 +12,7 @@
     <title>Anasayfa</title>
 </head>
 <body>
+
     <!-- //////////// ÜST NAVİGASYON BAŞLA /////////////-->
     <div class="nav">
         <div>
@@ -310,6 +311,25 @@
         </div>
        
     </div>
+
+<div class="arka_golge"></div>
+    <div class="modal">
+            <img src="https://i.dr.com.tr/cache/600x600-0/originals/0000000723974-1.jpg" alt="" class="kapak">
+            <img src="https://i.dr.com.tr/cache/600x600-0/originals/0000000723974-1.jpg" alt="" class="kapak">
+            <div class="kapat">KAPAT</div>
+            <div class="baslik">
+                Harry Potter And The Sorcerer's Stone
+            </div>
+            <div class="yazi">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati porro assumenda sapiente quod neque quos quasi molestiae facere et ipsum voluptatum exercitationem ab, eius distinctio saepe blanditiis possimus in natus!
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio, voluptas. Iste cupiditate obcaecati quae perferendis pariatur non enim a! Ratione laudantium commodi cumque laborum reprehenderit libero? Culpa, earum similique! Vero!
+                Cumque facilis suscipit laudantium ducimus ipsum, nemo voluptates vero minus eaque velit dicta unde assumenda facere optio tempore ullam corporis inventore similique repellendus eligendi odit sed iusto! Sit, molestias tempore?
+                Cumque illo accusantium magni quae hic porro ut est officia nihil dolorum nemo, similique voluptates veniam ipsum deleniti? Dolores ad porro dignissimos eum veritatis fugiat quae amet, accusantium neque eos.
+                Quisquam, quaerat. Architecto in recusandae ullam a quasi quas enim fugiat vitae odio vel non, adipisci odit obcaecati quia optio voluptates asperiores provident accusantium modi. Esse sint reiciendis facere laudantium.
+            </div>
+            <a href="#" class="buton1">OKU</a>
+            <a href="#" class="buton2">Kitap Sayfasına Git</a>
+        </div>
 
 
 <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
