arama çubuğu ve menü eklendi

--- a/anasayfa.html
+++ b/anasayfa.html
@@ -14,13 +14,16 @@
 
     <!-- //////////// ÜST NAVİGASYON BAŞLA /////////////-->
     <div class="nav">
-        <div>
             <div class="header">Book Leader</div>
-        </div>
-        <div>
+            <form id="arama_form">
+                <label id="arama_label">
+                    <i class="material-icons arama_icon">search</i> 
+                    <input type="text" placeholder="Aranacak Kelime...">
+                    <span class="kapat">Kapat</span>
+                </label>
+            </form>
             <i class="material-icons search_icon">search</i>          
-            <i class="material-icons menu_icon">menu</i>
-        </div>    
+            <i class="material-icons menu_icon">menu</i>  
     </div>
     <!-- //////////// ÜST NAVİGASYON BİTİŞ /////////////-->
 
@@ -229,7 +232,7 @@
                 <div class="aciklama">
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptates architecto atque aliquid sequi modi officia alias distinctio tempore autem! Eum, sapiente aperiam. Qui, illum quod facere fugiat ducimus similique reprehenderit?
                 </div>
-                <a href="#" class="buton">See The Book</a>
+                <a href="javascript:void(0)" class="buton">See The Book</a>
             </div>
         </div>
         <div class="kutu js-fillcolor">
@@ -248,7 +251,7 @@
                 <div class="aciklama">
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptates architecto atque aliquid sequi modi officia alias distinctio tempore autem! Eum, sapiente aperiam. Qui, illum quod facere fugiat ducimus similique reprehenderit?
                 </div>
-                <a href="#" class="buton">See The Book</a>
+                <a href="javascript:void(0)" class="buton">See The Book</a>
             </div>
         </div>
         <div class="kutu js-fillcolor">
@@ -267,7 +270,7 @@
                 <div class="aciklama">
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptates architecto atque aliquid sequi modi officia alias distinctio tempore autem! Eum, sapiente aperiam. Qui, illum quod facere fugiat ducimus similique reprehenderit?
                 </div>
-                <a href="#" class="buton">See The Book</a>
+                <a href="javascript:void(0)" class="buton">See The Book</a>
             </div>   
         </div>
         <div class="kutu js-fillcolor">
@@ -286,7 +289,7 @@
                 <div class="aciklama">
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptates architecto atque aliquid sequi modi officia alias distinctio tempore autem! Eum, sapiente aperiam. Qui, illum quod facere fugiat ducimus similique reprehenderit?
                 </div>
-                <a href="#" class="buton">See The Book</a>
+                <a href="javascript:void(0)" class="buton">See The Book</a>
             </div>   
         </div>
         <div class="kutu js-fillcolor">
@@ -305,7 +308,7 @@
                 <div class="aciklama">
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptates architecto atque aliquid sequi modi officia alias distinctio tempore autem! Eum, sapiente aperiam. Qui, illum quod facere fugiat ducimus similique reprehenderit?
                 </div>
-                <a href="#" class="buton">See The Book</a>
+                <a href="javascript:void(0)" class="buton">See The Book</a>
             </div>   
         </div>
        
@@ -330,6 +333,23 @@
             <a href="#" class="buton2">Kitap Sayfasına Git</a>
         </div>
 
+    <div class="side_menu">
+        <div class="baslik">Wattcat</div>
+        <div class="linkler">
+            <a href="javascript:void(0)">Popular</a>
+            <a href="javascript:void(0)">Pages</a>
+            <a href="javascript:void(0)">Books</a>
+            <a href="javascript:void(0)">Profil</a>
+            <a href="javascript:void(0)">Collection</a>
+            <a href="javascript:void(0)">Setting</a>
+            <a href="javascript:void(0)">Log out</a>
+            <div class="cizgi"></div>
+        </div>
+        <div class="profil">
+            <img src="https://i.dr.com.tr/cache/600x600-0/originals/0000000723974-1.jpg" alt="">
+            <span class="isim">Salimcan Satıcı</span>
+        </div>
+    </div>
 
 <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.1/min/tiny-slider.js"></script>
