kitap sayfası guncellendi

--- a/kitap_sayfasi.html
+++ b/kitap_sayfasi.html
@@ -44,6 +44,95 @@
         Optio enim earum, soluta, inventore fugit repellat libero tempora necessitatibus recusandae maxime quae ratione aliquam quibusdam veritatis, autem at. Aspernatur facere perspiciatis nulla fugiat tenetur doloremque ab maxime quis vitae!
     </div>
 
+    <h2>Önerilen Kitaplar</h2>
+    <div class="onerilen_kitaplar">
+        <div class="kitap_cont">
+            <a href="#" class="aaa">
+                <img src="https://i.dr.com.tr/cache/600x600-0/originals/0001800104001-1.jpg" alt="" class="kapak">
+                <img src="https://i.dr.com.tr/cache/600x600-0/originals/0001800104001-1.jpg" alt="" class="abs_img">
+                <div class="baslik"> Optio enim earum, soluta, inventore</div>
+            </a>
+        </div>
+        <div class="kitap_cont">
+            <a href="#" class="aaa">
+                <img src="https://i.dr.com.tr/cache/600x600-0/originals/0001800104001-1.jpg" alt="" class="kapak">
+                <img src="https://i.dr.com.tr/cache/600x600-0/originals/0001800104001-1.jpg" alt="" class="abs_img">
+                <div class="baslik"> Optio enim earum, soluta, inventore</div>
+            </a>
+        </div>
+        <div class="kitap_cont">
+            <a href="#" class="aaa">
+                <img src="https://i.dr.com.tr/cache/600x600-0/originals/0001800104001-1.jpg" alt="" class="kapak">
+                <img src="https://i.dr.com.tr/cache/600x600-0/originals/0001800104001-1.jpg" alt="" class="abs_img">
+                <div class="baslik"> Optio enim earum, soluta, inventore</div>
+            </a>
+        </div>   
+        <div class="kitap_cont">
+            <a href="#" class="aaa">
+                <img src="https://i.dr.com.tr/cache/600x600-0/originals/0001800104001-1.jpg" alt="" class="kapak">
+                <img src="https://i.dr.com.tr/cache/600x600-0/originals/0001800104001-1.jpg" alt="" class="abs_img">
+                <div class="baslik"> Optio enim earum, soluta, inventore</div>
+            </a>
+        </div>    
+        <div class="kitap_cont">
+            <a href="#" class="aaa">
+                <img src="https://i.dr.com.tr/cache/600x600-0/originals/0001800104001-1.jpg" alt="" class="kapak">
+                <img src="https://i.dr.com.tr/cache/600x600-0/originals/0001800104001-1.jpg" alt="" class="abs_img">
+                <div class="baslik"> Optio enim earum, soluta, inventore</div>
+            </a>
+        </div>
+        <div class="kitap_cont">
+            <a href="#" class="aaa">
+                <img src="https://i.dr.com.tr/cache/600x600-0/originals/0001800104001-1.jpg" alt="" class="kapak">
+                <img src="https://i.dr.com.tr/cache/600x600-0/originals/0001800104001-1.jpg" alt="" class="abs_img">
+                <div class="baslik"> Optio enim earum, soluta, inventore</div>
+            </a>
+        </div>
+    </div>
+
+    <h2>Önerilen Yazarlar</h2>
+    <div class="onerilen_yazarlar">
+        <div class="yazar_cont">
+            <img src="https://i.dr.com.tr/cache/600x600-0/originals/0001800104001-1.jpg" alt="" class="yazar_resim">
+            <a href="#" class="yazar_isim">Salimcan Satıcı</a>
+        </div>
+        <div class="yazar_cont">
+            <img src="https://i.dr.com.tr/cache/600x600-0/originals/0001800104001-1.jpg" alt="" class="yazar_resim">
+            <a href="#" class="yazar_isim">Salimcan Satıcı</a>
+        </div>
+        <div class="yazar_cont">
+            <img src="https://i.dr.com.tr/cache/600x600-0/originals/0001800104001-1.jpg" alt="" class="yazar_resim">
+            <a href="#" class="yazar_isim">Salimcan Satıcı</a>
+        </div>
+        <div class="yazar_cont">
+            <img src="https://i.dr.com.tr/cache/600x600-0/originals/0001800104001-1.jpg" alt="" class="yazar_resim">
+            <a href="#" class="yazar_isim">Salimcan Satıcı</a>
+        </div>
+        <div class="yazar_cont">
+            <img src="https://i.dr.com.tr/cache/600x600-0/originals/0001800104001-1.jpg" alt="" class="yazar_resim">
+            <a href="#" class="yazar_isim">Salimcan Satıcı</a>
+        </div>
+        <div class="yazar_cont">
+            <img src="https://i.dr.com.tr/cache/600x600-0/originals/0001800104001-1.jpg" alt="" class="yazar_resim">
+            <a href="#" class="yazar_isim">Salimcan Satıcı</a>
+        </div>
+        <div class="yazar_cont">
+            <img src="https://i.dr.com.tr/cache/600x600-0/originals/0001800104001-1.jpg" alt="" class="yazar_resim">
+            <a href="#" class="yazar_isim">Salimcan Satıcı</a>
+        </div>
+        <div class="yazar_cont">
+            <img src="https://i.dr.com.tr/cache/600x600-0/originals/0001800104001-1.jpg" alt="" class="yazar_resim">
+            <a href="#" class="yazar_isim">Salimcan Satıcı</a>
+        </div>
+        <div class="yazar_cont">
+            <img src="https://i.dr.com.tr/cache/600x600-0/originals/0001800104001-1.jpg" alt="" class="yazar_resim">
+            <a href="#" class="yazar_isim">Salimcan Satıcı</a>
+        </div>
+    </div>
+
+    <footer>
+        bide buraya bi footer yapıcaz
+    </footer>
  
 <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
 <script src="javascript/kitap_sayfasi.js"></script>
